// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`grades new editions consistently without changing the published legacy mapping 1`] = `
{
  "difficulty": "medium",
  "givens": [
    [
      null,
      null,
      null,
      null,
      2,
      null,
      1,
      null,
      null,
    ],
    [
      null,
      3,
      null,
      null,
      1,
      null,
      9,
      null,
      7,
    ],
    [
      null,
      9,
      null,
      7,
      null,
      8,
      null,
      2,
      5,
    ],
    [
      null,
      null,
      2,
      null,
      null,
      6,
      null,
      4,
      9,
    ],
    [
      null,
      7,
      null,
      null,
      8,
      null,
      null,
      null,
      3,
    ],
    [
      null,
      4,
      null,
      2,
      null,
      null,
      6,
      null,
      null,
    ],
    [
      null,
      null,
      5,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    [
      null,
      null,
      9,
      8,
      null,
      5,
      null,
      null,
      null,
    ],
    [
      null,
      null,
      null,
      null,
      null,
      1,
      null,
      null,
      null,
    ],
  ],
  "id": "daily-2026-09-25",
  "solution": [
    [
      5,
      6,
      7,
      9,
      2,
      3,
      1,
      8,
      4,
    ],
    [
      2,
      3,
      8,
      5,
      1,
      4,
      9,
      6,
      7,
    ],
    [
      4,
      9,
      1,
      7,
      6,
      8,
      3,
      2,
      5,
    ],
    [
      8,
      5,
      2,
      1,
      3,
      6,
      7,
      4,
      9,
    ],
    [
      1,
      7,
      6,
      4,
      8,
      9,
      2,
      5,
      3,
    ],
    [
      9,
      4,
      3,
      2,
      5,
      7,
      6,
      1,
      8,
    ],
    [
      7,
      1,
      5,
      3,
      4,
      2,
      8,
      9,
      6,
    ],
    [
      6,
      2,
      9,
      8,
      7,
      5,
      4,
      3,
      1,
    ],
    [
      3,
      8,
      4,
      6,
      9,
      1,
      5,
      7,
      2,
    ],
  ],
}
`;

exports[`keeps the published date-to-board mapping stable for persisted editions 1`] = `
{
  "difficulty": "medium",
  "givens": [
    [
      null,
      null,
      null,
      null,
      null,
      7,
      3,
      null,
      null,
    ],
    [
      7,
      2,
      5,
      null,
      null,
      null,
      null,
      null,
      4,
    ],
    [
      null,
      null,
      null,
      4,
      null,
      9,
      5,
      null,
      null,
    ],
    [
      2,
      null,
      7,
      8,
      null,
      1,
      null,
      null,
      5,
    ],
    [
      null,
      null,
      9,
      null,
      null,
      null,
      null,
      1,
      null,
    ],
    [
      null,
      null,
      null,
      5,
      9,
      null,
      7,
      2,
      null,
    ],
    [
      null,
      6,
      null,
      9,
      null,
      8,
      4,
      null,
      null,
    ],
    [
      null,
      null,
      1,
      null,
      null,
      null,
      null,
      3,
      6,
    ],
    [
      null,
      7,
      4,
      null,
      2,
      3,
      null,
      8,
      9,
    ],
  ],
  "id": "daily-2026-09-24",
  "solution": [
    [
      9,
      4,
      8,
      2,
      5,
      7,
      3,
      6,
      1,
    ],
    [
      7,
      2,
      5,
      1,
      3,
      6,
      8,
      9,
      4,
    ],
    [
      6,
      1,
      3,
      4,
      8,
      9,
      5,
      7,
      2,
    ],
    [
      2,
      3,
      7,
      8,
      6,
      1,
      9,
      4,
      5,
    ],
    [
      4,
      5,
      9,
      3,
      7,
      2,
      6,
      1,
      8,
    ],
    [
      1,
      8,
      6,
      5,
      9,
      4,
      7,
      2,
      3,
    ],
    [
      3,
      6,
      2,
      9,
      1,
      8,
      4,
      5,
      7,
    ],
    [
      8,
      9,
      1,
      7,
      4,
      5,
      2,
      3,
      6,
    ],
    [
      5,
      7,
      4,
      6,
      2,
      3,
      1,
      8,
      9,
    ],
  ],
}
`;
